# noema

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  gws.py  main.py  ui_teacher.py  ui_training_env.py
concept/: __init__.py  clustering.py  graph.py
config/: meta.yaml  safety.yaml  tools.yaml  value.yaml
control/: __init__.py  candidates.py  planner.py  policy.py
docs/: learning_guide.md
env/: __init__.py  io_text.py
lang/: __init__.py  format.py  parse.py
memory/: __init__.py  episodic.py  index_faiss.py  wm.py
perception/: __init__.py  encoder.py  train_contrastive.py
safety/: __init__.py  dsl.py  shield.py
scripts/: __init__.py  init.py  init_faiss.py  migrate_parquet.py
selfmeta/: __init__.py  calibrate.py  self_model.py
skills/: __init__.py  ask_clarify.py  invoke_calc.py  manifest.yaml  reply_from_memory.py  reply_greeting.py  reply_smalltalk.py
sleep/: __init__.py  offline.py
tests/: test_runner.py
tests/regression/: arith-2plus2.yaml  compute-fa.yaml  demo-memory.yaml  greeting.yaml  rule-weather.yaml  smalltalk.yaml  style-greeting.yaml
toolhub/: __init__.py  registry.py  verify.py
value/: __init__.py  reward.py
world/: __init__.py  dynamics.py
